fix: dropdown switcher list not aligned to parent

--- a/modules/dropdownSwitcher/styles.less
+++ b/modules/dropdownSwitcher/styles.less
@@ -19,10 +19,11 @@
 }
 #p-themes .vector-menu-content {
     background: #000538;
+    top: 100%;
 }
 #p-themes li {
     width: 100%;
-    border-radius: 4px;
+    border-radius: 6px;
 }
 #p-themes li a {
     padding: 0.25em 0.5em;
